--- a/_output.yml
+++ b/_output.yml
@@ -4,9 +4,9 @@ bookdown::gitbook:
   config:
     toc:
       before: |
-        <li><a href="./">金融数学</a></li>
+        <li><a href="./">Mathematical Foundations</a></li>
       after: |
-        <li><a href="https://github.com/sxpyggy/Financial-Mathematics" target="blank">GitHub repo</a></li>
+        <li><a href="https://github.com/sxpyggy/Mathematical-Foundations" target="blank">GitHub repo</a></li>
 # download: ["pdf", "epub"]
 # bookdown::pdf_book:
 #  includes:
