--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -5,6 +5,7 @@ language:
     chapter_name: "Chapter "
 delete_merged_file: true
 output_dir: "docs"
-rmd_files: ["index.Rmd","00-revision.Rmd","01-differentiation.Rmd","02-integration.Rmd",
-"04-financial-maths.Rmd","4-5-solutions.Rmd","1-3-solutions.Rmd"]
+rmd_files: ["index.Rmd","00-revision.Rmd","01-financial-maths.Rmd",
+"02-differentiation.Rmd","03-integration.Rmd",
+"4-6-solutions.Rmd","1-3-solutions.Rmd"]
 #rmd_files: ["index.Rmd","01-interest.Rmd","02-level-annuity.Rmd","90-homework.Rmd"]
