--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -5,7 +5,7 @@ language:
     chapter_name: ""
 delete_merged_file: true
 output_dir: "docs"
-rmd_files: ["index.Rmd","00-revision.Rmd","01-sets.Rmd","02-functions.Rmd",
-"09-financial-maths.Rmd","04-differentiation.Rmd","05-partial-d.Rmd",
-"06-integration.Rmd", "4-6-solutions.Rmd","1-3-solutions.Rmd"]
-#rmd_files: ["index.Rmd","01-interest.Rmd","02-level-annuity.Rmd","90-homework.Rmd"]
+rmd_files: ["index.Rmd","00-revision-2.Rmd","01-sets.Rmd","02-functions-2.Rmd",
+"03-limits.Rmd","04-trigonometric.Rmd","05-integration-2.Rmd","06-vectors.Rmd",
+"07-matrices.Rmd"]
+#rmd_files: ["index.Rmd","4-6-solutions.Rmd","1-3-solutions.Rmd"]
