--- a/_output.yml
+++ b/_output.yml
@@ -4,7 +4,7 @@ bookdown::gitbook:
   config:
     toc:
       before: |
-        <li><a href="./">Mathematical Foundations</a></li>
+        <li><a href="./">Mathematical Foundations (II)</a></li>
       after: |
         <li><a href="https://github.com/sxpyggy/Mathematical-Foundations" target="blank">GitHub repo</a></li>
     toolbar:
@@ -13,7 +13,7 @@ bookdown::gitbook:
     download: null
     search: yes
     fontsettings:
-      theme: sepia
+      theme: white
       family: serif
       size: 2
     sharing:
